favicon is updated

--- a/Portfolio/public/index.html
+++ b/Portfolio/public/index.html
@@ -13,7 +13,7 @@
       content="frontend developer, web developer, html, css, javascript, react, react js, git, github"
     />
    
-    <link rel="shortcut icon" href="https://i.pinimg.com/564x/b7/f7/0c/b7f70c7505436f40817ad49e07b09cc5.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOeL0So8RFbql_O_bKrgQhmc6r666v-qgbQz9PqzLhZw&s" type="image/x-icon" />
     <!-- FONT AWESOME ICONS  -->
     <script
       src="https://kit.fontawesome.com/7fe568590b.js"
